将节目隐藏在flash中
增加SPI FLASH的读写功能， 将灯光秀节目放在了flash中

--- a/project/use_all_components/Project/play_all_components.uvprojx
+++ b/project/use_all_components/Project/play_all_components.uvprojx
@@ -458,6 +458,11 @@
               <FileType>1</FileType>
               <FilePath>..\User\src\i2c_ee.c</FilePath>
             </File>
+            <File>
+              <FileName>spi_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\src\spi_flash.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
